[package]
name = "chat"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "chat"
path = "src/biblioteca.rs"

[[bin]]
name = "cliente"
path = "src/cliente.rs"
doc = false

[[bin]]
name = "servidor"
path = "src/servidor.rs"
doc = false

[dependencies]
